# storage/api-docs/api-docs.json
@@ -1801,6 +1801,43 @@
                     }
                 ]
             }
+        },
+        "/api/laporkan": {
+            "post": {
+                "tags": [
+                    "Laporan"
+                ],
+                "summary": "Laporan",
+                "description": "Laporan",
+                "operationId": "f7d4335a479874facb002f08bdac3271",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "$ref": "#/components/schemas/LaporanRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Laporan berhasil dikirim"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "cookieAuth": [
+                            "jwtToken"
+                        ]
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -1847,7 +1884,7 @@
             },
             "KelolaFasilitasRuangRequest": {
                 "properties": {
-                    "lantai": {
+                    "ruangan_id": {
                         "type": "string",
                         "example": ""
                     },
@@ -1865,8 +1902,11 @@
                         "example": ""
                     },
                     "ruangan_id": {
-                        "type": "string",
-                        "example": ""
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "example": "[]"
                     }
                 },
                 "type": "object"
@@ -2051,6 +2091,31 @@
                     }
                 },
                 "type": "object"
+            },
+            "LaporanRequest": {
+                "properties": {
+                    "lantai": {
+                        "type": "string",
+                        "example": ""
+                    },
+                    "user_id": {
+                        "type": "string",
+                        "example": ""
+                    },
+                    "fasilitas_ruang_id": {
+                        "type": "string",
+                        "example": ""
+                    },
+                    "deskripsi_laporan": {
+                        "type": "string",
+                        "example": ""
+                    },
+                    "lapor_foto": {
+                        "type": "binary",
+                        "example": ""
+                    }
+                },
+                "type": "object"
             }
         }
     },
@@ -2082,6 +2147,10 @@
         {
             "name": "Kelola Ruangan Role",
             "description": "Kelola Ruangan Role"
+        },
+        {
+            "name": "Laporan",
+            "description": "Laporan"
         }
     ]
 }
